plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'

}

loom {
	accessWidenerPath = file("src/main/resources/terrarium.accesswidener")
	runs {
		client {
			vmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED",
					"-Dorg.geotools.coverage.io.file.memorymapped=true",
					"-Djava.awt.headless=true",
					"-Djavax.imageio.spi.IIORegistry.noClasspath=true"
		}
		server {
			vmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED",
					"-Dorg.geotools.coverage.io.file.memorymapped=true",
					"-Djava.awt.headless=true",
					"-Djavax.imageio.spi.IIORegistry.noClasspath=true"
		}
	}
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	mavenCentral()
	maven { url "https://maven.nucleoid.xyz" }
}

dependencies {

	// Minecraft/Fabric dependencies
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"



}



processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}
